--- a/zadania-domowe/zadanie-6/css/style.css
+++ b/zadania-domowe/zadanie-6/css/style.css
@@ -1,50 +1,77 @@
 /*General styles*/
-*{
-    margin:0;
-    padding:0;
+
+* {
+
+    margin: 0;
+    padding: 0;
+
 }
+
 /*Menu styles*/
+
 #main-nav {
-    width:100%;
-    background-color:darkblue;
-    position:relative;
-    top:0;
+
+    width: 100%;
+    background-color: darkblue;
+    position: relative;
+    top: 0;
+
 }
+
 #main-nav ul {
-    display:inline-block;
+
+    display: inline-block;
     list-style: none;
     color: #fff;
-    
+
 }
-#main-nav ul>li {
-    display:inline-block;
-    padding-bottom:20px;
-    padding-top:20px;
-    padding-right:15px;
-    text-transform: uppercase; 
+
+#main-nav ul > li {
+
+    display: inline-block;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-right: 15px;
+    text-transform: uppercase;
+
 }
+
 #main-nav #left-nav {
-    padding-left:10px;
+
+    padding-left: 10px;
+
 }
+
 #main-nav #right-nav {
-    float:right;
-    padding-right:10px;
+
+    float: right;
+    padding-right: 10px;
 }
-#main-header {
-    width:100%;
-    height:60px;
-    background-color:darkblue; 
-    position:relative;
+ /*Triangle styles*/
+.triangle {
+
+    height: 100px;
+    bottom: 0;
+    position: relative;
+    width: 100%;
+    background-color: darkblue;
+
 }
-#main-header .triangle {
-  width: 0; 
-  height: 60px; 
-  border-left: 650px solid transparent;
-  border-right: 650px solid transparent;
-  border-bottom: 80px solid #fff;
-  position:absolute;
-  bottom:0;
+
+.triangle:after {
+
+    content: "";
+    position: absolute;
+    width: 0;
+    border-left: 50vw solid transparent;
+    border-right: 50vw solid transparent;
+    border-bottom: 90px solid #fff;
+    bottom: 0;
+
 }
+
 #main-content .main-text h1 {
-    text-align:center;
+
+    text-align: center;
+
 }
