--- a/zadania-domowe/zadanie-12/css/style.css
+++ b/zadania-domowe/zadanie-12/css/style.css
@@ -137,6 +137,9 @@ adress a:hover {
     position: absolute;
     font-size:initial; 
     transition: all 0.3s ease-in-out;
+    top:0;
+    left:0;
+    padding:5px;
 }
 .item-mask:hover {
      opacity: 1;
